# mlibc

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
cmake/: CMakeLists.txt
cmake/checks/: bool_is_builtin.c
include/: alloca.h  errno.h  iso646.h  math.h  stdarg.h  stdatomic.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  threads.h  unistd.h
include/internals/: debug.h  file.h  internal-io.h  memory.h  mman.h  syscall-table.h  threads.h  vector.h
include/internals/bits/: int.h  internal-signed.h  internal-unsigned.h  uint.h  wordsize.h
special/: start.asm
src/: main.asm  main.c  public_symbols.txt  stdlib.c  syscall.asm  syscall.c
src/entry/: exit_syscall.asm  main.c  syscall_64.asm
src/internals/: debug.c  syscalls.asm  syscalls.c  vector.c
src/stdio/: file.c
src/stdlib/: exit.c  math.c  memory.c
src/string/: string.asm  string.c
src/threads/: mutex.c  threads.c
tests/: alloc_1mb.c  basic_allocating.c
tests/fail/: opening_invalid_file.c
